# chat-orchestrator

./: .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: attachments.py  chat_service.py  config.py  main.py  model_catalog.py  openai_client.py  schemas.py  storage.py
backend/app/providers/: anthropic_provider.py  base.py  google_provider.py  openai_provider.py  registry.py
backend/app/skills_runtime/: __init__.py  base.py  manager.py
backend/chat_orchestrator_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/data/: chat.db
backend/skills/audit_news_action_brief/: README.md  audit_news_llm_client.py  skill.py  skill.yaml
backend/skills/boj_timeseries_insight/: README.md  cache.py  client.py  series_catalog.py  skill.py  skill.yaml
backend/skills/context_summarizer/: README.md  skill.py  skill.yaml
backend/skills/docx_auto_commenter/: README.md  docx_comments.py  llm_client.py  skill.py  skill.yaml
backend/skills/edinet_report_qa/: README.md  company_resolver.py  documents_repository.py  llm_client.py  (+5 more)
backend/tests/: test_attachment_flow.py  test_audit_news_feedback_api.py  test_audit_news_llm_client.py  test_audit_news_skill.py  test_audit_news_skill_logging.py  test_boj_cache.py  test_boj_client.py  test_boj_series_catalog.py  test_boj_skill_format.py  test_chat_api_artifacts.py  test_config_proxy.py  test_docx_auto_commenter.py  test_docx_auto_commenter_llm_client.py  test_model_catalog.py  test_openai_web_tool.py  test_skill_manager.py  test_skills_api.py
(+37 files in other folders)
